<resources>
    <string name="app_name">TaiwanAirQuality</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="text_sitename">SiteName:</string>
    <string name="text_country">City:</string>
    <string name="text_psi">PSI:</string>
    <string name="text_majorpollutant">MajorPollutant:</string>
    <string name="text_status">Status:</string>
    <string name="text_so2">SO2:</string>
    <string name="text_co">CO:</string>
    <string name="text_o3">O3:</string>
    <string name="text_pm10">PM10:</string>
    <string name="text_pm2.5">PM2.5:</string>
    <string name="text_no2">NO2:</string>
    <string name="text_windspeed">WindSpeed:</string>
    <string name="text_winddirec">WindDirec:</string>
    <string name="text_fpmi">FPMI:</string>
    <string name="text_nox">NOx:</string>
    <string name="text_no">NO:</string>
    <string name="text_publishtime">PublishTime:</string>
    <string name="text_uvi">UVI</string>
    <string name="uv_low">LOW</string>
    <string name="uv_medium">MEDIUM</string>
    <string name="uv_high">HIGH</string>
    <string name="uv_veryhigh">VERY HIGH</string>
    <string name="uv_extreme">EXTREME</string>
    <string name="uv_PublishAgency">PublishAgency</string>
    <string name="air_sitename">SiteName:</string>
    <string name="air_county">County:</string>
    <string name="air_psi">PSI:</string>
    <string name="air_majorpollutant">MajorPollutant:</string>
    <string name="text_acculocation">Location</string>
    <string name="tmp_low">Low:</string>
    <string name="tmp_high">High:</string>
</resources>
