<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
        <TextView
            android:id="@+id/text_airsitename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/air_sitename" />

        <TextView
            android:id="@+id/airsitename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/text_airsitename"
            android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <TextView
                android:id="@+id/text_aircounty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/air_county" />

            <TextView
                android:id="@+id/aircounty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/text_aircounty"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <TextView
                android:id="@+id/text_airpsi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/air_psi" />

            <TextView
                android:id="@+id/airpsi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/text_airpsi"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <TextView
                android:id="@+id/text_airmajorpollutant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/air_majorpollutant" />

            <TextView
                android:id="@+id/airmajorpollutant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/text_airmajorpollutant"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <TextView
                android:id="@+id/text_airstatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_status" />

            <TextView
                android:id="@+id/airstatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/text_airstatus"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/text_so2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_so2" />

            <TextView
                android:id="@+id/so2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/text_so2"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/text_co"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_co" />

            <TextView
                android:id="@+id/co"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/text_co"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/text_o3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_o3" />

            <TextView
                android:id="@+id/o3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/text_o3"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/text_pm10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_pm10" />

            <TextView
                android:id="@+id/pm10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/text_pm10"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/text_pm2.5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_pm2.5" />

            <TextView
                android:id="@+id/pm25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/text_pm2.5"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/text_no2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_no2" />

            <TextView
                android:id="@+id/no2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/text_no2"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/text_windspeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_windspeed" />

            <TextView
                android:id="@+id/windspeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/text_windspeed"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/text_winddirec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_winddirec" />

            <TextView
                android:id="@+id/winddirec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/text_winddirec"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/text_fpmi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_fpmi" />

            <TextView
                android:id="@+id/fpmi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/text_fpmi"
                android:text="TextView" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/text_nox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_nox" />

            <TextView
                android:id="@+id/nox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/text_nox"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/text_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_no" />

            <TextView
                android:id="@+id/no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/text_no"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <TextView
                android:id="@+id/text_airpublishtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_publishtime" />

            <TextView
                android:id="@+id/airpublishtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/text_airpublishtime"
                android:text="TextView" />
        </TableRow>
    </TableLayout>

</LinearLayout>