<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/sitename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="TextView"
        android:textSize="26dp"
        android:paddingTop="10dp"/>

    <TextView
        android:id="@+id/text_sitename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_sitename" />




    <TextView
        android:id="@+id/text_psi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_psi"
        android:paddingTop="30dp"
        android:gravity="center"
        />


    <TextView
        android:id="@+id/psi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:gravity="center"
        android:textSize="78dp"
        />


    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="TextView"
        android:textSize="30dp"/>


    <TextView
        android:id="@+id/text_majorpollutant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_majorpollutant"
        android:gravity="center"
        android:paddingTop="15dp"
        />

    <TextView
        android:id="@+id/majorpollutant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="TextView"
        android:textSize="28dp"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp"
        >

        <TextView
            android:id="@+id/text_publishtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_publishtime" />

        <TextView
            android:id="@+id/publishtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/text_publishtime"
            android:text="TextView" />

    </RelativeLayout>

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/more2"
        android:id="@+id/imageButton"
        android:layout_gravity="right"

        android:background="@color/cardview_shadow_end_color" />


</LinearLayout>
